Fixed spacing in the navbar
Fixed the spacing between the components of the Navigation bar.

--- a/src/index.css
+++ b/src/index.css
@@ -22,17 +22,37 @@ a:hover {
   color: #535bf2;
 }
 
+
 body {
   margin: 0;
+  padding-top: 64px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
+
+.navbar {
+  background-color: #333;
+  padding: 15px;
+  color: white;
+  z-index: 1000;
+}
+
+.navbar-container {
+  max-width: 800px;
+  width: 100%;
+}
+
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.navbar {
+  display: flex;
+  
 }
 
 button {
